# lifting_simplices_to_find_injectivity

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  TLC.cpp  build_mac.sh  lifted_test.cpp
IO/: convert_input_2D.py  convert_input_3D.py  extract_boundary_vert.py  get_result_mesh.py
example/: input  result  solver_options
test/: lifted  lifted_res  lifted_solver_options
